--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,6 @@ repositories {
 
 dependencies {
     compile 'javax:javaee-api:7.0'
+    compile 'javax.inject:javax.inject:1'
+    compile 'org.slf4j:slf4j-api:1.7.5'
 }
